# BehaveMAE

./: .gitignore  LICENSE  README.md  engine_pretrain.py  environment.yml  main_pretrain.py  main_test.py  requirements.txt  run_pretrain.py  run_test.py  setup.cfg
behave_mae/: __init__.py  version.py
behavemae/: __init__.py  version.py
datasets/: README.md  augmentations.py  hbabel.py  mabe22_mice.py  pose_traj_dataset.py  shot7m2.py
datasets/hBABEL/: prepare_hbabel_data.py  prepare_hbabel_labels.py
hBABEL/: README.md  frame_number_map_train.npy  frame_number_map_val.npy  generate_hbabel.py
hierAS-eval/: README.md  evaluator.py
hierAS-eval/eval/metadata/: clip_lengths_mouse_triplets.json  jax_split.json  jax_tasks.json  mouse_frame_number_map.npy
hierAS-eval/eval/metadata/Shot7M2/: clip_lengths_Shot7M2.json  frame_number_map_Shot7M2.npy  split_info_Shot_75_Shot7M2.json  task_info_Shot7M2.json
hierAS-eval/eval/metadata/hBABEL/: clip_length_hBABEL_val_filtered.json  frame_number_map_val_filtered.npy  split_info_hBABEL_val_filtered.json  (+2 more)
hierAS-eval/eval/training/: README.md  dataloader.py  eval.py  gridsearch.py  run_all_tasks.py  train_and_eval.py  trainer.py  training_config.json  utils.py
hierAS-eval/results/: mouse-round-1--sample_submission.npy.csv
models/: general_hiera.py  hbehave_mae.py  hiera_utils.py  models_defs.py
scripts/hbabel/: test_hBehaveMAE.sh  train_hBehaveMAE.sh
scripts/mabe_mice/: test_hBehaveMAE.sh  train_hBehaveMAE.sh
scripts/shot7m2/: test_hBehaveMAE.sh  train_hBehaveMAE.sh
util/: misc.py  pos_embed.py
(+3 files in other folders)
