[metadata]
name = behave_mae
version = attr: behave_mae.version.__version__
author = Lucas Stoffl, Andy Bonnetto, Stéphane d'Ascoli, Alexander Mathis
author_email = alexander.mathis@epfl.ch
description = Elucidating the Hierarchical Nature of Behavior with Masked Autoencoders
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/amathislab/BehaveMAE

[options]
packages = behave_mae
include_package_data = True
python_requires = >=3.10
install_requires = file: requirements.txt

[options.extras_require]
dev =
    pylint
    toml
    yapf
    black
    pytest